--- a/FrontEnd/principal.html
+++ b/FrontEnd/principal.html
@@ -48,7 +48,7 @@
         <div class="profile-pic">
           <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Perfil">
         </div>
-        <span>Vinicius Gallo Santos</span>
+        <span>Vinicius G.</span>
         <i class="fas fa-chevron-down"></i>
       </div>
       <div class="dropdown-menu">
@@ -130,10 +130,8 @@
     <div class="widget-card" id="upcoming-events-widget">
         </div>
 
-
-
-
-
+    <div class="widget-card" id="featured-projects-widget">
+        </div>
    
     <div class="widget-card" id="who-to-follow-widget">
         <div class="widget-header">
