Barra de scroll removida

--- a/FrontEnd/principal.html
+++ b/FrontEnd/principal.html
@@ -84,7 +84,7 @@
         <a href="principal.html" class="active"><i class="fas fa-home"></i> Feed</a>
         <a href="mensagem.html"><i class="fas fa-comment-dots"></i> Mensagens <span class="badge">3</span></a>
         <a href="projeto.html"><i class="fas fa-users"></i> Projetos</a>
-        <a href="vaga.html"><i class="fas fa-briefcase"></i> Vagas</a>
+        <a href="vaga.html"><i class="fas fa-briefcase"></i> Vagas de Emprego</a>
         <a href="evento.html"><i class="fas fa-calendar-check"></i> Eventos</a>
       </nav>
       
@@ -165,25 +165,7 @@
   </aside>
   </div>
 
-  <div class="floating-actions">
-    <button class="float-btn main-btn"><i class="fas fa-plus"></i></button>
-    <div class="float-menu">
-      <a href="projeto.html">
-        <button class="float-btn" data-action="project">
-          <i class="fas fa-file-code"></i>
-          <span class="tooltip">Novo Projeto</span>
-        </button>
-      </a>
-      <button class="float-btn" data-action="post">
-        <i class="fas fa-feather-alt"></i>
-        <span class="tooltip">Nova Postagem</span>
-      </button>
-      <button class="float-btn" data-action="event">
-        <i class="fas fa-calendar-plus"></i>
-        <span class="tooltip">Criar Evento</span>
-      </button>
-    </div>
-  </div>
+
 
   <script src="Principal/JS/principal.js"></script>
 </body>
