--- a/FrontEnd/principal.html
+++ b/FrontEnd/principal.html
@@ -35,9 +35,20 @@
         <span class="badge">3</span>
       </div>
       <div class="nav-icon" data-tooltip="Notificações">
-        <i class="fas fa-bell"></i>
-        <span class="badge">5</span>
-      </div>
+    <i class="fas fa-bell" id="notification-icon"></i>
+    <span class="badge">5</span>
+    <!-- Mini menu de notificações -->
+  <div id="notification-menu" class="notification-menu">
+    <div class="notification">
+      <p>Nova mensagem recebida</p>
+    </div>
+    <div class="notification">
+      <p>Seu projeto foi aprovado</p>
+    </div>
+    <!-- Mais notificações podem ser adicionadas aqui -->
+  </div>
+</div>
+
       <div class="theme-toggle" data-tooltip="Alternar tema">
         <i class="fas fa-moon"></i>
       </div>
