--- a/FrontEnd/evento.html
+++ b/FrontEnd/evento.html
@@ -30,7 +30,7 @@
     <div class="user-dropdown">
       <div class="user">
         <div class="profile-pic"><img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Perfil"></div>
-        <span>Vinicius G.</span><i class="fas fa-chevron-down"></i>
+        <i class="fas fa-chevron-down"></i>
       </div>
       <div class="dropdown-menu">
         <a href="#"><i class="fas fa-user"></i> Meu Perfil</a>
