--- a/FrontEnd/projeto.html
+++ b/FrontEnd/projeto.html
@@ -24,7 +24,7 @@
             <div class="theme-toggle" data-tooltip="Alternar tema"><i class="fas fa-moon"></i></div>
         </nav>
         <div class="user-dropdown">
-            <div class="user"><div class="profile-pic"><img src="img/perfil.png" alt="Perfil"></div><span>Usuário Temporario</span><i class="fas fa-chevron-down"></i></div>
+            <div class="user"><div class="profile-pic"><img src="img/perfil.png" alt="Perfil"></div><i class="fas fa-chevron-down"></i></div>
             <div class="dropdown-menu"><a href="#"><i class="fas fa-user"></i> Meu Perfil</a><a href="#"><i class="fas fa-cog"></i> Configurações</a><a href="login.html"><i class="fas fa-sign-out-alt"></i> Sair</a></div>
         </div>
     </header>
