--- a/FrontEnd/mensagem.html
+++ b/FrontEnd/mensagem.html
@@ -23,7 +23,7 @@
         </div>
         <nav class="nav-icons">
       <div class="nav-icon" data-tooltip="Início">
-        <a href="#"><i class="fas fa-home"></i></a>
+        <a href="/FrontEnd/principal.html"><i class="fas fa-home"></i></a>
       </div>
       <div class="nav-icon" data-tooltip="Mensagens">
         <a href="mensagem.html"><i class="fas fa-comment-dots"></i></a>
