ajustando as fotos

--- a/FrontEnd/mensagem.html
+++ b/FrontEnd/mensagem.html
@@ -40,7 +40,7 @@
         </nav>
         <div class="user-dropdown">
             <div class="user">
-                <div class="profile-pic"><img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Perfil"></div>
+                <div class="profile-pic"><img src="img/perfil.png" alt="Perfil"></div>
                 <i class="fas fa-chevron-down"></i>
             </div>
             <div class="dropdown-menu">
